exercises/02-filtrer-tracker

--- a/src/App.css
+++ b/src/App.css
@@ -37,3 +37,12 @@
     transform: rotate(360deg);
   }
 }
+
+.component-search-input input {
+  border-radius: 4px;
+  border: 1px solid #bbb;
+  box-sizing: border-box;
+  font-size: 18px;
+  padding: 10px 8px;
+  width: 400px;
+}
