--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,17 @@
   color: #61dafb;
 }
 
+.App-content {
+  background-color: #282c34;
+  min-height: 50vh;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: center;
+  font-size: calc(10px + 1vmin);
+  color: white;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -46,4 +57,3 @@
   padding: 10px 8px;
   width: 400px;
 }
-
