--- a/src/App.css
+++ b/src/App.css
@@ -53,7 +53,7 @@
   border-radius: 4px;
   border: 1px solid #bbb;
   box-sizing: border-box;
-  font-size: 18px;
+  font-size: calc(10px + 2vmin);
   padding: 10px 8px;
   width: 400px;
 }
