--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 1vh;
+  min-height: 2vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -56,4 +56,34 @@
   font-size: calc(10px + 2vmin);
   padding: 10px 8px;
   width: 400px;
+}
+
+.Form {
+  text-align: left;
+  margin-top: 30px;
+  margin-left: 50px;
+  margin-right: 50px;
+}
+
+.Form input {
+  font-size: 18px;
+  width: 100%;
+}
+.Form select {
+  font-size: 18px;
+  width: 100%;
+}
+.Form legend {
+  text-align: center;
+}
+
+.Form label {
+  text-align: left;
+  width: 100%;
+}
+
+.Action {
+  display: flex;
+  flex-direction: row;
+  margin: 10px 0px 10px 0px;
 }
